tests/enum_into/compile_fail/field/duplicate_field_mapping.stderr
error: Multiple mapping found for target enum `Target`
 --> tests/enum_into/compile_fail/field/duplicate_field_mapping.rs:7:9
  |
7 |         #[enum_into(Target::a, Target::b)] // Should be #[enum_into(Target::a)]
  |         ^
